# dailyLogger

./: .auto-progress.md  .editorconfig  .gitignore  AGENTS.md  AGENT_PLAN.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  plan.md  prompt.md  quick-note.html  readiness_check.json  review_result.json  tailwind.config.js  tsconfig.json  vite.config.js
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
.sisyphus/plans/: manual-screenshot-trigger.md
_bmad-output/: dev-log.md  diagnostic.md  sprint-status.yaml
_bmad-output/implementation-artifacts/: AI-001.md  AI-002.md  AI-003.md  AI-004.md  AI-005-retro-2026-03-15.md  AI-005.md  AI-006-retro-2026-03-21.md  AI-006.md  AI-retrospective.md  ANALYTICS-001.md  ARCH-001.md  ARCH-002.md  CLEAN-001-retro-2026-03-22.md  CLEAN-001.md  CORE-001-retro-2026-03-15.md  CORE-001.md  CORE-002-retro-2026-03-15.md  CORE-002.md  CORE-003.md  CORE-004.md  CORE-005.md  CORE-006.md  CORE-007-retro-2026-03-15.md  CORE-007.md  CORE-008-retro-2026-03-15.md  CORE-008.md  CORE-retrospective.md  DATA-001.md  DATA-002.md  DATA-003.md  (+87 more)
coverage/: clover.xml  coverage-final.json  index.html
docs/: performance-report.md
e2e-tests/: .env.example  .gitignore  README.md  agent_loop.py  pyproject.toml  run_e2e_test.py  start_tauri_cdp.bat  tauri_connection.py  test_cases.py  test_e2e_vue.py  ui_state_extractor.py
e2e-tests/tests/: test_framework.py
specs/: AI-004.md  AI-005.md  ARCH-001-architecture-refactor.md  ARCH-010-architecture-constraints.md  CORE-001.md  CORE-002.md  CORE-003.md  CORE-005.md  CORE-006.md  DATA-004.md  DEP-001-tailwind-v4.md  FEAT-001-reanalyze-screenshot.md  FEAT-002-remove-auth.md  MAINT-011-settings-modal-split.md  REPORT-001.md  SMART-004.md  TEST-018-e2e-playwright.md  TS-INFRA-001.md  UX-001-error-feedback.md  UX-002-report-lock.md  UX-003-offline-banner.md  UX-004-screenshot-summary.md  UX-005-tag-filter-collapse.md  UX-010-use-modal.md  UX-011-report-dropdown.md  UX-012-history-virtual-scroll.md  UX-020-settings-split.md  UX-021-tag-color-config.md  add.md  team-collaboration-requirements.md  ui001-ui-improvement.md  v1.77.0-ui-optimization.md
src/: App.vue  i18n.js  i18n.ts  main.js  main.ts  quick-note.ts  setupTests.ts  theme.ts
src-tauri/: .auto-progress.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_backup_scheduler.rs  dingtalk.rs  errors.rs  fine_tuning.rs  github.rs  lib.rs  main.rs  monitor.rs  monitor_types.rs  network.rs  network_status.rs  notion.rs  offline_queue.rs  ollama.rs  performance.rs  plugin.rs  silent_tracker.rs  slack.rs  timeline.rs  work_time.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/auto_perception/: mod.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/bootstrap/: commands.rs  logging.rs  mod.rs  tray.rs
src-tauri/src/commands/: capture_commands.rs  mod.rs  model_commands.rs  report_commands.rs  session_commands.rs  settings_commands.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/hardware/: mobile.rs  mock.rs  mod.rs  platform.rs
src-tauri/src/infrastructure/: mod.rs  retry.rs  state.rs
src-tauri/src/manual_entry/: mod.rs
src-tauri/src/memory_storage/: migration.rs  mod.rs  records.rs  schema.rs  settings.rs  tags.rs
src-tauri/src/services/: capture_service.rs  mod.rs  model_service.rs  report_service.rs  session_service.rs  settings_service.rs  vision_api.rs
src-tauri/src/session_manager/: mod.rs
src-tauri/src/synthesis/: mod.rs
src-tauri/src/team/: mod.rs
src-tauri/src/window_info/: mod.rs
(+284 files in other folders)
