[package]
name = "daily-logger"
version = "1.2.3"
description = "AI Workflow Memory & Summary Agent"
authors = ["DailyLogger"]
edition = "2021"

[lib]
name = "daily_logger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = "0.22"
dirs = "5"
image = "0.25"
thiserror = "2"
once_cell = "1"
anyhow = "1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
xcap = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
