[package]
name = "daily-logger"
version = "1.23.0"
description = "AI Workflow Memory & Summary Agent"
authors = ["DailyLogger"]
edition = "2021"

[lib]
name = "daily_logger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["screenshot"]
screenshot = ["dep:xcap"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.39", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = "0.22"
dirs = "5"
image = "0.25"
once_cell = "1"
anyhow = "1"
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
zip = "2"
tempfile = "3"
walkdir = "2"

[dev-dependencies]
serial_test = "3"

# Desktop-only dependencies
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Global shortcuts are desktop-only (mobile apps run in foreground only)
tauri-plugin-global-shortcut = "2"
# Screenshot capture (xcap) - desktop only
xcap = { version = "0.9", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Patch libspa to fix compatibility with pipewire 0.3.48+
# The newer pipewire removed the 'flags' field and changed modifier type to i64
[patch.crates-io]
libspa = { path = "../patches/libspa" }
